add aiEnabled boolean to config endpoint dto
